--- a/app/css/components/combo-button.css
+++ b/app/css/components/combo-button.css
@@ -5,7 +5,7 @@
     @apply flex items-stretch;
     @apply p-0;
 
-    box-shadow: 0px 3px 6px rgba(79, 114, 205, 0.4);
+    box-shadow: 0px 3px 6px rgba(var(--shadowColorMain), 0.4);
 
     &.--disabled {
         opacity: 0.8;
