--- a/app/css/modals/completed-exercise.css
+++ b/app/css/modals/completed-exercise.css
@@ -25,7 +25,9 @@
             width: 128px;
             top: -64px;
             @apply absolute mb-24;
-            filter: drop-shadow(0px -5px 42px rgba(79, 114, 205, 0.3));
+            filter: drop-shadow(
+                0px -5px 42px rgba(var(--shadowColorMain), 0.3)
+            );
         }
         & > h3 {
             @apply text-h4 mb-24;
