--- a/app/css/modals/finish-student-mentor-discussion.css
+++ b/app/css/modals/finish-student-mentor-discussion.css
@@ -52,7 +52,9 @@
                 @apply absolute;
                 top: 0;
                 right: 0;
-                filter: drop-shadow(0px 4px 16px rgba(79, 114, 205, 0.3));
+                filter: drop-shadow(
+                    0px 4px 16px rgba(var(--shadowColorMain), 0.3)
+                );
             }
         }
     }
