--- a/app/css/modals/testimonial.css
+++ b/app/css/modals/testimonial.css
@@ -21,7 +21,7 @@
         top: -40px;
         left: 50%;
         margin-left: -40px;
-        filter: drop-shadow(0px -5px 42px rgba(79, 114, 205, 0.3));
+        filter: drop-shadow(0px -5px 42px rgba(var(--shadowColorMain), 0.3));
     }
     & .testimonial-section {
         @apply px-48 py-32;
