--- a/app/css/pages/dashboard.css
+++ b/app/css/pages/dashboard.css
@@ -136,7 +136,7 @@
         @apply flex mb-40;
         @apply rounded-8 bg-backgroundColorA;
 
-        box-shadow: 0px 4px 42px rgba(79, 114, 205, 0.15);
+        box-shadow: 0px 4px 42px rgba(var(--shadowColorMain), 0.15);
 
         & .action {
             width: 25%;
