--- a/app/css/ui-kit/buttons.css
+++ b/app/css/ui-kit/buttons.css
@@ -31,27 +31,27 @@
 
     .btn-i-filled {
         &.btn-xs {
-            box-shadow: 0px 2px 4px rgba(79, 114, 205, 0.2);
+            box-shadow: 0px 2px 4px rgba(var(--shadowColorMain), 0.2);
             &:hover {
-                box-shadow: 0px 2px 4px rgba(79, 114, 205, 0.4);
+                box-shadow: 0px 2px 4px rgba(var(--shadowColorMain), 0.4);
             }
         }
         &.btn-s {
-            box-shadow: 0px 3px 5px rgba(79, 114, 205, 0.3);
+            box-shadow: 0px 3px 5px rgba(var(--shadowColorMain), 0.3);
             &:hover {
-                box-shadow: 0px 3px 5px rgba(79, 114, 205, 0.5);
+                box-shadow: 0px 3px 5px rgba(var(--shadowColorMain), 0.5);
             }
         }
         &.btn-m {
-            box-shadow: 0px 4px 6px rgba(79, 114, 205, 0.4);
+            box-shadow: 0px 4px 6px rgba(var(--shadowColorMain), 0.4);
             &:hover {
-                box-shadow: 0px 4px 6px rgba(79, 114, 205, 0.6);
+                box-shadow: 0px 4px 6px rgba(var(--shadowColorMain), 0.6);
             }
         }
         &.btn-l {
-            box-shadow: 0px 4px 7px rgba(79, 114, 205, 0.4);
+            box-shadow: 0px 4px 7px rgba(var(--shadowColorMain), 0.4);
             &:hover {
-                box-shadow: 0px 4px 7px rgba(79, 114, 205, 0.6);
+                box-shadow: 0px 4px 7px rgba(var(--shadowColorMain), 0.6);
             }
         }
     }
@@ -93,7 +93,7 @@
             background: rgb(96, 79, 205, 0.02);
             &.btn-l {
                 background: rgb(96, 79, 205, 0.05);
-                box-shadow: 0px 4px 8px rgba(79, 114, 205, 0.6);
+                box-shadow: 0px 4px 8px rgba(var(--shadowColorMain), 0.6);
             }
         }
     }
