Many-many changes, fixes

--- a/app/css/components/discussion-timeline.css
+++ b/app/css/components/discussion-timeline.css
@@ -122,6 +122,7 @@
 
                 & .c-icon {
                     width: 50%;
+                    @apply filter-textColor6;
                 }
             }
         }
