--- a/app/css/components/notification-dot.css
+++ b/app/css/components/notification-dot.css
@@ -2,5 +2,6 @@
     height: 8px;
     width: 8px;
 
-    @apply bg-lightBlue rounded-circle;
+    @apply rounded-circle;
+    background: var(--c-prominent-link-color);
 }
