--- a/app/css/pages/community-solution-show.css
+++ b/app/css/pages/community-solution-show.css
@@ -181,6 +181,7 @@
                             width: 16px;
                             height: 16px;
                             @apply mr-8;
+                            @apply filter-textColor6;
                         }
                         & span {
                             @apply text-textColor6 font-medium leading-150;
