--- a/app/css/pages/exercise-show.css
+++ b/app/css/pages/exercise-show.css
@@ -55,7 +55,7 @@
         }
     }
     & section.taught-concepts {
-        @apply bg-backgroundColorA py-16 px-32 shadow-lg rounded-8 mb-32;
+        @apply bg-backgroundColorB py-16 px-32 shadow-lg rounded-8 mb-32;
 
         & h3 {
             @apply text-18 font-medium mb-8 leading-paragraph;
@@ -166,13 +166,15 @@
                     @apply mr-24;
                 }
                 & a.more-info {
-                    @apply text-16 text-lightBlue leading-170 font-semibold;
+                    color: var(--c-prominent-link-color);
+                    @apply text-16  leading-170 font-semibold;
                     @apply flex items-center;
 
                     & .c-icon {
                         height: 16px;
                         width: 16px;
                         @apply ml-8;
+                        filter: var(--c-prominent-link-icon-filter);
                     }
                 }
             }
@@ -359,7 +361,7 @@
     }
 
     & section.instructions {
-        @apply mb-32 bg-backgroundColorA rounded-8 shadow-lg;
+        @apply mb-32 bg-backgroundColorB rounded-8 shadow-lg;
         & .source {
             @apply mt-24;
             & hr {
@@ -418,7 +420,8 @@
             @apply text-16 leading-160 mb-16 text-textColor2;
 
             & a {
-                @apply text-lightBlue font-medium;
+                @apply font-medium;
+                color: var(--c-prominent-link-color);
             }
 
             & strong {
