--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -80,7 +80,11 @@ img {
 
     .btn-link-legacy {
         @apply btn-small;
-        @apply border-0 text-lightBlue p-0;
+        @apply border-0  p-0;
+        color: var(--c-prominent-link-color);
+        .c-icon {
+            filter: var(--c-prominent-link-icon-filter);
+        }
     }
 
     a.text-a-subtle,
