--- a/app/css/pages/about.css
+++ b/app/css/pages/about.css
@@ -22,7 +22,8 @@
     }
 
     & .purpose {
-        @apply bg-evenLighterBlue border-purple;
+        @apply border-purple;
+        background: var(--backgroundColorTracksListJoined);
         & h2 {
             & .c-icon {
                 height: 32px;
@@ -113,7 +114,7 @@
         }
     }
     & .donate-section {
-        @apply bg-evenLighterBlue;
+        background: var(--backgroundColorTracksListJoined);
 
         & .c-icon.icon {
             width: 48px;
