--- a/app/css/tooltips/student.css
+++ b/app/css/tooltips/student.css
@@ -42,6 +42,7 @@
             height: 16px;
             width: 16px;
             @apply mr-12;
+            @apply filter-textColor6;
         }
     }
     & .previous-sessions {
