--- a/app/css/tooltips/user.css
+++ b/app/css/tooltips/user.css
@@ -37,6 +37,7 @@
             height: 16px;
             width: 16px;
             @apply mr-12;
+            @apply filter-textColor6;
         }
     }
 
