--- a/app/css/components/iterations-footer.css
+++ b/app/css/components/iterations-footer.css
@@ -6,7 +6,7 @@
     background: linear-gradient(
         180deg,
         var(--backgroundColorB) 0%,
-        var(--backgroundColorA) 50%
+        var(--backgroundColorB) 50%
     );
     box-shadow: 0px -4px 16px var(--backgroundColorB);
 
@@ -30,12 +30,16 @@
                 @apply text-darkGray text-13 font-semibold font-mono;
 
                 &.unread {
-                    @apply border-orange bg-lightOrange;
+                    color: var(--textColorIterationCommentsUnread);
+                    background: var(--backgroundColorIterationCommentsUnread);
+                    border-color: var(--borderColorIterationCommentsUnread);
                 }
             }
 
             &.active {
-                @apply text-darkGray border-lightBlue bg-veryLightBlue;
+                color: var(--textColorIterationActive);
+                border-color: var(--borderColorIterationActive);
+                background: var(--backgroundColorTeamInfoBox);
             }
         }
         & .previous {
