--- a/app/css/components/alert.css
+++ b/app/css/components/alert.css
@@ -8,10 +8,11 @@ this could be turned into one alert, with common props, then have variants below
 this is c-alert--caution
 */
 .c-alert {
+    background: var(--backgroundColorCAlert);
+    color: var(--textColorCAlert);
     @apply border-2 border-orange rounded-8;
-    @apply bg-lightOrange;
     @apply py-12 px-24;
-    @apply font-medium leading-150 text-caution;
+    @apply font-medium leading-150;
     & strong {
         @apply font-semibold text-textColor2;
     }
