--- a/app/css/pages/notifications.css
+++ b/app/css/pages/notifications.css
@@ -40,8 +40,7 @@
             & .c-avatar {
             }
             & .icon {
-                /* TODO: Really this color? */
-                color: #604fcd;
+                @apply filter-textColor6;
             }
             & .content {
                 @apply flex-grow mr-24;
@@ -63,13 +62,13 @@
                 @apply flex-shrink-0 rounded-circle mr-24;
             }
             & .unread {
-                @apply bg-lightBlue;
+                background: var(--backgroundColorNotificationsUnreadDot);
             }
 
             & .action-icon {
                 height: 16px;
                 width: 16px;
-                @apply text-textColor6;
+                @apply filter-textColor6;
             }
         }
         & .c-prominent-link {
