Move concept line variables into colors.css, add better filter on concept icon on EDs, couple tweaks

--- a/app/css/components/exercise-dot.css
+++ b/app/css/components/exercise-dot.css
@@ -71,7 +71,7 @@
             filter: var(--white-filter);
         }
         &.--available:after {
-            filter: var(--textColor7-filter);
+            filter: var(--iconFilterEDConcept);
         }
     }
 }
