--- a/app/css/pages/track-show.css
+++ b/app/css/pages/track-show.css
@@ -181,9 +181,10 @@
                 height: 24px;
                 width: 24px;
                 @apply mr-24;
+                @apply filter-textColor6;
             }
             & p {
-                @apply text-17 leading-170 font-medium text-textColor7;
+                @apply text-17 leading-170 font-medium text-textColor6;
             }
         }
 
