--- a/app/css/pages/exercise-show.css
+++ b/app/css/pages/exercise-show.css
@@ -18,7 +18,8 @@
 #page-exercise-show {
     & section.completed-heading {
         @apply flex items-center py-12 px-32 shadow-lg rounded-8 mb-24;
-        @apply border-2 border-darkGreen bg-mediumGreen;
+        @apply border-2 border-darkGreen;
+        background: var(--backgroundColorCompletedHeading);
 
         & .check-mark-icon {
             height: 32px;
@@ -27,6 +28,13 @@
         }
         & .text {
             @apply text-h5 flex-grow;
+        }
+
+        .c-prominent-link {
+            color: var(--backgroundColorNotificationsUnreadDot);
+            .c-icon {
+                filter: var(--iconFilterNotificationsProminentLink);
+            }
         }
     }
     & section.completed-info {
