Add more bullet config
WIP

WIP

Catch more things

Fix typo

Further tweaks

Add a current

Remove memoization for now

Eager load exercise and track for site updates

Eager load track for hero of journey page

Eager load student and mentor in mentor_discussions_controller

Fix omniauth test failures

--- a/app/views/tracks/mentor_discussions/_mentoring_in_progress.html.haml
+++ b/app/views/tracks/mentor_discussions/_mentoring_in_progress.html.haml
@@ -1,6 +1,6 @@
 .mentoring-in-progress
   .header.c-mentor-discussion-widget
-    = avatar(current_user, css_class: 'c-avatar student-avatar')
+    = avatar(discussion.student, css_class: 'c-avatar student-avatar')
     = avatar(discussion.mentor, css_class: 'c-avatar mentor-avatar')
 
     .info
