Further refinements to Mindshifting May

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -89,10 +89,10 @@
           .text-purple.font-semibold.leading-150.flex.items-center.mb-4
             %span.emoji.mr-6 📆
             Month 4 of #12in23
-          %h2.text-h3 It's Analytical April!
+          %h2.text-h3 It's Mindshifting May!
           %p.text-p-base.mb-6
-            This month we're exploring three languages that are great for Data Science(Python, Julia and R).
-            We've got exercises, SWAG and live streaming.
+            This month we're exploring languages that will get you thinking differently - Ballerina, Pharo, Red, TCL, Unison and Prolog!
+            Have fun expanding your mind!
           = link_to challenge_path('12in23'), class: "btn btn-primary btn-base" do
             %span Explore #12in23
             = graphical_icon "arrow-right"
